--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,21 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Claude Code
+.claude/
+CLAUDE.md
+
+# Yarn Berry
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# Documentation files
+BACKEND_CART_MINIMAL.md
+BACKEND_FILTERS_PLAN.md
+FRONTEND_CART_SYNC_GUIDE.md
+FRONTEND_NOTIFICATIONS_GUIDE.md
+backend_filter_front.md
