--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "image-size": "^2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
@@ -55,6 +56,7 @@
     "@nestjs/testing": "^10.3.8",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/image-size": "^0.7.0",
     "@types/jest": "29.5.12",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.7",
