chore: consolidate npm as single package manager, update .gitignore for yarn berry artifacts
- Add explicit .gitignore entries for yarn berry files (.yarn/, .pnp.cjs, .pnp.loader.mjs, yarn.lock)
- Regenerate package-lock.json to reflect npm-only dependency state
- Remove conflicting yarn configuration completely to prevent future confusion

This ensures npm remains the sole package manager and prevents yarn artifacts from being tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,13 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# Yarn Berry (pnp mode)
+.yarn/
+.pnp
+.pnp.cjs
+.pnp.loader.mjs
+yarn.lock
+
 # OS
 .DS_Store
 
